# Prompt-Production

./: .gitignore  CLAUDE.md  LICENSE  README.md  SESSION-HANDOFF.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: test.yml
agents/: behavioral-eval.md  complex-engineer.md  context-architect.md  debugger.md  eval-architect.md  moderate-engineer.md  multiagent-architect.md  niche-analyzer.md  observatory.md  regression-eval.md  simple-engineer.md  structural-eval.md  task-decomposer.md
commands/: analyze.md  debug.md  evaluate.md  generate.md  help.md
docs/: AGENTS.md  ARCHITECTURE.md  RESEARCH.md
playbook/domains/: code_review.jsonl  ecommerce_support.jsonl  fintech_support.jsonl  general_general.jsonl  healthcare_intake.jsonl  marketing_general.jsonl  support_support.jsonl
skills/anti-patterns/: SKILL.md
skills/nuance-engine/: SKILL.md
skills/prompt-production/: SKILL.md
skills/technique-library/: SKILL.md
src/prompt_production/: __init__.py  formatter.py  pipeline.py  types.py
src/prompt_production/agents/: base.py  behavioral_eval.py  complex_engineer.py  context_architect.py  debugger.py  eval_architect.py  moderate_engineer.py  multiagent_architect.py  niche_analyzer.py  observatory.py  (+4 more)
techniques/: composition_rules.yaml  recipes.yaml  registry.yaml
tests/: conftest.py  test_composer.py  test_e2e.py  test_formatter.py  test_nuance.py  test_phase5.py  test_pipeline.py  test_router.py  test_testbench.py  test_types.py
tests/test_agents/: test_niche_analyzer.py  test_structural_eval.py  test_task_decomposer.py
(+12 files in other folders)
