[project]
name = "prompt-production"
version = "0.0.1"
description = "13-agent test-driven context engineering framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Tyler Fisk"},
    {name = "Shaheer Khawaja"},
]

dependencies = [
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
]
integrations = [
    "dspy-ai>=2.6",
    "langfuse>=3.0",
]

[project.scripts]
pp = "prompt_production.cli:app"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/prompt_production --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_production"]
